# webapp

./: .gitignore  DEPENDENCIES.md  README.md  docker-compose.yml  init-aws.sh  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: e2e-tests.yml
backend/: .env.example  Dockerfile  database.py  main.py  requirements.txt  solver.py
data/: test_instance.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  FILE_INDEX.md  FRONTEND_USER_GUIDE.md  GETTING_STARTED.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  START_HERE.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  tailwind.css
frontend/src/components/: BerthScheduleChart.jsx  Footer.jsx  Header.jsx  Modal.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  History.jsx  Solver.jsx
tests/: README.md
tests/e2e/: README.md  package.json  playwright.config.js
tests/e2e/fixtures/: test-data.json
tests/e2e/tests/: api-integration.spec.js  dashboard.spec.js  history.spec.js  solver-manual.spec.js  solver-upload.spec.js
tests/integration/: README.md  conftest.py  pytest.ini  test_api.py  test_database.py  test_solver.py
